# ELF

./: .dockerignore  .gitignore  .taplo.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  build.rs  docker-compose.baseline.yml  docker-compose.parity.yml  docker-compose.yml  elf.example.toml
apps/elf-api/: Cargo.toml
apps/elf-api/src/: lib.rs  main.rs  routes.rs  state.rs
apps/elf-api/src/routes/: admin_notes.rs  admin_ops.rs  consolidation.rs  contract.rs  core_memory.rs  docs.rs  dreaming.rs  events.rs  graph.rs  health.rs  ingestion_profiles.rs  knowledge.rs  notes.rs  recall.rs  route_builder.rs  search.rs  sharing.rs  support.rs  tests.rs  trace.rs  types.rs  viewer.rs  work_journal.rs
apps/elf-api/static/: viewer.html
apps/elf-api/tests/: http.rs
apps/elf-api/tests/http/: auth_admin.rs  contract.rs  helpers.rs  request_validation.rs  sharing.rs
apps/elf-cli/: Cargo.toml
apps/elf-cli/src/: args.rs  commands.rs  diagnostics.rs  http.rs  json.rs  main.rs  tasks.rs
apps/elf-cli/src/args/: benchmark.rs  commands.rs  common.rs  constants.rs  diagnostics.rs  memory.rs  search.rs
apps/elf-eval/: Cargo.toml
apps/elf-eval/fixtures/agentmemory/: sample_session.json
apps/elf-eval/fixtures/external_memory_pattern_radar/: cursor.json
apps/elf-eval/fixtures/production_corpus/: synthetic_coding_agent_manifest.json
apps/elf-eval/fixtures/real_world_external_adapters/: memory_projects_manifest.json
apps/elf-eval/fixtures/real_world_live_adapters/: project_decision_fixture_boundary.json  retrieval_claim_boundary.json  work_resume_exact_next_action.json
apps/elf-eval/fixtures/report_snapshots/: 2026-06-11-capture-write-policy-live-report.json  2026-06-11-competitor-strength-adoption-report.json  2026-06-11-elf-qmd-memory-evolution-diagnostic.json  2026-06-11-elf-qmd-retrieval-debug-profile.json  2026-06-11-elf-qmd-trace-replay-diagnostics-report.json  2026-06-11-first-generation-oss-continuity-source-store-report.json  2026-06-11-qmd-openviking-strength-profile-report.json  2026-06-11-xy-897-competitor-strength-matrix.json  2026-06-11-xy-898-first-generation-oss-adapter-promotion.json  2026-06-11-xy-931-openmemory-ui-export-readback.json  2026-06-16-dreaming-readiness-stage-ledger.json  2026-06-16-live-temporal-reconciliation-report.json  2026-06-16-proactive-brief-scoring-report.json  2026-06-16-scheduled-memory-task-scoring-report.json  2026-06-17-dreaming-competitor-strength-retest-report.json  2026-06-19-graph-rag-citation-navigation-promotion-report.json  2026-06-19-letta-core-archive-export-readback-report.json  2026-06-19-openmemory-ui-export-product-readback-report.json  2026-06-19-openviking-trajectory-materialization-report.json  2026-06-19-operator-approved-public-proxy-production-private-addendum.json  2026-06-19-qmd-debug-ergonomics-dreaming-retest-report.json  2026-06-19-service-native-dreaming-readback-materialization.json  2026-06-19-service-native-dreaming-readback-report.json  2026-06-20-agent-knowledge-os-closeout-benchmark-report.json  2026-06-20-dreaming-review-queue-report.json  2026-06-20-recall-debug-panel-report.json  2026-06-22-mem0-openmemory-letta-memory-history-core-archive-report.json  2026-06-22-p1-memory-authority-closeout-report.json  2026-06-22-p2-knowledge-workspace-pageindex-openkb-closeout-report.json  2026-06-22-pageindex-openkb-same-corpus-adapter-report.json  2026-06-23-graph-rag-adapter-matrix-report.json  2026-06-23-p3-competitor-strength-absorption-report.json  2026-06-23-p4-production-readiness-evidence-gates-report.json  2026-06-23-p4-quality-hardening-productization-readiness-report.json  2026-06-27-public-quantitative-competitor-scoreboard-report.json
apps/elf-eval/src/: app.rs  lib.rs  main.rs
apps/elf-eval/src/app/: cli.rs  compare.rs  dataset.rs  eval.rs  metrics.rs  tests.rs  trace_compare.rs  types.rs
apps/elf-eval/tests/: agentmemory_fixture_adapter.rs  real_world_job_benchmark.rs
apps/elf-eval/tests/real_world_job_benchmark/: adversarial_quality.rs  baseline_counts.rs  benchmark_core.rs  benchmark_core_adversarial_scoreboard.rs  benchmark_core_blocker_rows.rs  benchmark_core_capture_sources.rs  benchmark_core_smoke_report.rs  closeout_reports.rs  closeout_reports_agent_knowledge.rs  closeout_reports_competitor_strength.rs  closeout_reports_graph_rag.rs  closeout_reports_helpers.rs  closeout_reports_openmemory.rs  closeout_reports_workspace.rs  competitor_retest.rs  competitor_strength.rs  competitor_strength_live.rs  competitor_strength_profile.rs  consolidation.rs  consolidation_knowledge.rs  consolidation_knowledge_tests_capture.rs  consolidation_knowledge_tests_fixtures.rs  consolidation_knowledge_tests_helpers.rs  consolidation_knowledge_tests_live.rs  core_archival.rs  core_archival_authority.rs  core_archival_context.rs  core_archival_scoring.rs  dreaming_readiness.rs  dreaming_reports.rs  external_adapters.rs  external_adapters_first_generation.rs  external_adapters_fixture.rs  external_adapters_graph_gates.rs  external_adapters_letta.rs  external_adapters_live_sweep.rs  external_adapters_operator_debug.rs  graph_rag.rs  header_shape.rs  letta_core.rs  (+54 more)
apps/elf-mcp/: Cargo.toml
apps/elf-mcp/src/: app.rs  lib.rs  main.rs  server.rs
apps/elf-mcp/src/app/: server.rs
apps/elf-mcp/src/server/: runtime.rs  schemas.rs  state.rs  support.rs  tests.rs
apps/elf-mcp/tests/: mcp.rs
apps/elf-worker/: Cargo.toml
apps/elf-worker/src/: chunking.rs  error.rs  lib.rs  main.rs  worker.rs
apps/elf-worker/src/worker/: consolidation_jobs.rs  doc_indexing.rs  helpers.rs  note_indexing.rs  outbox_jobs.rs  runtime.rs  tests.rs  trace_jobs.rs  types.rs
crates/elf-service/: Cargo.toml
crates/elf-service/src/: add_event.rs  add_note.rs  admin.rs  delete.rs  lib.rs  list.rs  search.rs  time_serde.rs  update.rs
crates/elf-service/tests/: acceptance_suite.rs  service.rs
crates/elf-service/tests/acceptance/: idempotency.rs  (+7 more)
crates/elf-storage/: Cargo.toml
crates/elf-storage/src/: db.rs  lib.rs  models.rs  outbox.rs  qdrant.rs  queries.rs  schema.rs
crates/elf-storage/tests/: db_smoke.rs  outbox.rs
(+798 files in other folders)
