[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-api"
version = "0.1.0"

[dependencies]
axum               = { workspace = true }
clap               = { workspace = true }
color-eyre         = { workspace = true }
elf-cli            = { path = "../../packages/elf-cli" }
elf-config         = { path = "../../packages/elf-config" }
elf-service        = { path = "../../packages/elf-service" }
elf-storage        = { path = "../../packages/elf-storage" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }

[dev-dependencies]
elf-testkit = { path = "../../packages/elf-testkit" }
sqlx        = { workspace = true }
tower       = { version = "0.5" }
