[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-api"
version = "0.2.0"

[dependencies]
axum               = { workspace = true }
clap               = { workspace = true }
color-eyre         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

elf-cli     = { workspace = true }
elf-config  = { workspace = true }
elf-domain  = { workspace = true }
elf-service = { workspace = true }
elf-storage = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }

[dev-dependencies]
sqlx  = { workspace = true }
tower = { workspace = true }

elf-testkit = { workspace = true }
