[package]
edition = "2024"
name    = "elf"
version = "0.2.0"

[[bin]]
name = "elf"
path = "src/main.rs"

[dependencies]
clap       = { workspace = true }
color-eyre = { workspace = true }
reqwest    = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }

elf-cli = { workspace = true }
