[package]
build       = "../../build.rs"
default-run = "elf-eval"
edition     = "2024"
name        = "elf-eval"
version     = "0.1.0"

[dependencies]
clap               = { workspace = true }
color-eyre         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

elf-cli     = { workspace = true }
elf-config  = { workspace = true }
elf-service = { workspace = true }
elf-storage = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }
