[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-mcp"
version = "0.1.0"

[dependencies]
axum       = { workspace = true }
clap       = { workspace = true }
color-eyre = { workspace = true }
elf-cli    = { path = "../../crates/elf-cli" }
elf-config = { path = "../../crates/elf-config" }
reqwest    = { workspace = true }
rmcp       = { version = "0.14", features = ["transport-streamable-http-server"] }
serde_json = { workspace = true }
tokio      = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }
