[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-mcp"
version = "0.2.0"

[dependencies]
axum       = { workspace = true }
clap       = { workspace = true }
color-eyre = { workspace = true }
reqwest    = { workspace = true }
rmcp       = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }

elf-cli    = { workspace = true }
elf-config = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }
