[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-worker"
version = "0.1.0"

[dependencies]
clap               = { workspace = true }
color-eyre         = { workspace = true }
elf-cli            = { path = "../../crates/elf-cli" }
elf-config         = { path = "../../crates/elf-config" }
elf-providers      = { path = "../../crates/elf-providers" }
elf-storage        = { path = "../../crates/elf-storage" }
qdrant-client      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }
