[package]
build   = "../../build.rs"
edition = "2024"
name    = "elf-worker"
version = "0.2.0"

[dependencies]
clap               = { workspace = true }
color-eyre         = { workspace = true }
qdrant-client      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
thiserror          = { workspace = true }
time               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

elf-chunking  = { workspace = true }
elf-cli       = { workspace = true }
elf-config    = { workspace = true }
elf-providers = { workspace = true }
elf-storage   = { workspace = true }

[build-dependencies]
vergen-gitcl = { workspace = true }
