[package]
name = "elf-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
color-eyre = { workspace = true }
elf-config = { path = "../elf-config" }
qdrant-client = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
