[package]
edition = "2024"
name    = "elf-storage"
version = "0.1.0"

[dependencies]
color-eyre    = { workspace = true }
elf-config    = { path = "../elf-config" }
qdrant-client = { workspace = true }
serde_json    = { workspace = true }
sqlx          = { workspace = true }
time          = { workspace = true }
uuid          = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
